# scalaser

./: CHANGELOG.rst  CMakeLists.txt  CURVED_STAIRS.rst  README.md  TESTCASES.rst  curved_stairs.rst  package.xml
launch/: angle.launch  scalaser.launch  stair_model.launch  stair_viz.launch  transform_2.launch  transform_3.launch
matlab/: 07-Jun-2015 22:38:39.fig  07-Jun-2015 22:54:19.fig  08-Jun-2015 01:42:09.fig  08-Jun-2015 09:59:50.fig  08-Jun-2015 11:00:23.fig  08-Jun-2015 11:01:10.fig  08-Jun-2015 22:20:56.fig  08-Jun-2015 22:24:58.fig  08-Jun-2015 22:26:48.fig  08-Jun-2015 22:31:20.fig  08-Jun-2015 23:02:36.fig  08-Jun-2015 23:52:02.fig  09-Jun-2015 17:03:39.fig  09-Jun-2015 17:47:34.fig  09-Jun-2015 21:41:02.fig  09-Jun-2015 21:42:06.fig  09-Jun-2015 21:42:39.fig  09-Jun-2015 21:43:16.fig  09-Jun-2015 21:46:37.fig  10-Jun-2015 17:17:29.fig  10-Jun-2015 17:20:21.fig  10-Jun-2015 17:24:58.fig  10-Jun-2015 17:26:55.fig  10-Jun-2015 17:36:38.fig  10-Jun-2015 17:45:57.fig  10-Jun-2015 17:46:47.fig  10-Jun-2015 17:50:30.fig  10-Jun-2015 17:52:22.fig  10-Jun-2015 18:01:41.fig  10-Jun-2015 18:01:59.fig  10-Jun-2015 18:03:02.fig  10-Jun-2015 18:05:10.fig  10-Jun-2015 18:06:34.fig  10-Jun-2015 18:08:18.fig  10-Jun-2015 18:12:04.fig  10-Jun-2015 18:15:41.fig  10-Jun-2015 18:17:04.fig  10-Jun-2015 18:37:25.fig  10-Jun-2015 18:39:31.fig  10-Jun-2015 18:40:03.fig  (+17 more)
rviz/: complete.rviz
src/: LaserScanToPointCloud.cpp  angle.cpp  angle.h  angle_matrices.cpp  angle_simple.cpp  chair_model.cpp  hough.cpp  laser2stair_tf_broadcaster.cpp  main.cpp  matching.cpp  matching.h  stair_model.cpp  stair_model.h  stair_viz.cpp
